Resolved blog grid spacing issue on mobile

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -262,6 +262,10 @@ body:not(.single) .entry-content p {
 			// 1, 3, 5, 7, 9
 			&:nth-of-type(2n+1) {
 				margin-right: 3.5%;
+
+				@media (max-width: 480px) {
+					margin-right: 0;
+				}
 			}
 		}
 
